# qt-valid

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  ssl.cpp  ssl.h
